// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons test suite android picture icon 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Text />
</RNCSafeAreaProvider>
`;

exports[`Icons test suite android snow icon 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    dataSet={Object {}}
    selectable={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        Object {
          "color": "#ec4899",
          "fontSize": 28,
          "height": 28,
          "lineHeight": 28,
          "width": 28,
        },
        Object {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
    testID="snow-icon"
  >
    
  </Text>
</RNCSafeAreaProvider>
`;

exports[`Icons test suite ios picture icon 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    dataSet={Object {}}
    selectable={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        Object {
          "color": Object {
            "100": "#dcfce7",
            "200": "#bbf7d0",
            "300": "#86efac",
            "400": "#4ade80",
            "50": "#f0fdf4",
            "500": "#22c55e",
            "600": "#16a34a",
            "700": "#15803d",
            "800": "#166534",
            "900": "#14532d",
          },
          "fontSize": 28,
          "height": 28,
          "lineHeight": 28,
          "width": 28,
        },
        Object {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
    testID="picture-icon"
  >
    
  </Text>
</RNCSafeAreaProvider>
`;

exports[`Icons test suite ios snow icon 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={false}
    dataSet={Object {}}
    selectable={false}
    style={
      Array [
        Object {
          "color": undefined,
          "fontSize": 12,
        },
        Object {
          "color": "#ec4899",
          "fontSize": 28,
          "height": 28,
          "lineHeight": 28,
          "width": 28,
        },
        Object {
          "fontFamily": "ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
    testID="snow-icon"
  >
    
  </Text>
</RNCSafeAreaProvider>
`;
